--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   aerospike:
     image: aerospike/aerospike-server:latest
@@ -6,22 +5,18 @@ services:
       - "3000:3000"
       - "3001:3001"
       - "3002:3002"
-    networks:
-      - backend
+    ulimits:
+      nofile:
+        soft: 15000
+        hard: 15000
 
   go-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "8080:8080"
     depends_on:
       - aerospike
     environment:
       - AEROSPIKE_HOST=aerospike
-      - AEROSPIKE_PORT=3005
-    networks:
-      - backend
-
-networks:
-  backend:
+      - AEROSPIKE_PORT=3000
+    restart: on-failure
