--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-#AEROSPIKE_HOST=localhost
-#AEROSPIKE_PORT=3005
+AEROSPIKE_HOST=localhost
+AEROSPIKE_PORT=3000
 AEROSPIKE_MODE=sync
 
-AS_TOTAL_TIMEOUT=5000
-AS_NAMESPACE=test
-AS_SET=ip
+AEROSPIKE_TIMEOUT=5000
+AEROSPIKE_NAMESPACE=test
