--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,15 @@ services:
         hard: 15000
     volumes:
       - ./aerospike.conf:/etc/aerospike/aerospike.conf
-  app:
-    build: .
-    depends_on:
-      - aerospike
-    environment:
-      - AEROSPIKE_HOST=aerospike
-      - AEROSPIKE_PORT=3000
-      - AEROSPIKE_NAMESPACE=test
-    restart: on-failure
-    volumes:
-      - .:/app/app
+
+#  app:
+#    build: .
+#    depends_on:
+#      - aerospike
+#    environment:
+#      - AEROSPIKE_HOST=aerospike
+#      - AEROSPIKE_PORT=3000
+#      - AEROSPIKE_NAMESPACE=test
+#    restart: on-failure
+#    volumes:
+#      - .:/app/app
