batch update counters

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ AEROSPIKE_MODE=sync
 AEROSPIKE_TIMEOUT=5000
 AEROSPIKE_TTL=3600
 AEROSPIKE_NAMESPACE=test
-AEROSPIKE_SET=ip_counters_3
+AEROSPIKE_SET=ip_counters
 
 WORKERS=100
+BATCH_SIZE=1000
